--- a/informatica/mspowerpoint.html
+++ b/informatica/mspowerpoint.html
@@ -30,7 +30,6 @@
     <a href="/informatica/msword.html" class="js-button">Anterior</a>
     <a href="/informatica/msexcel.html" class="js-button" style="float: right;">Próximo</a>
 
-
     <!-- #region    ============    POST    ===================   -->
 
     <h1>Microsoft PowerPoint</h1>
@@ -60,15 +59,15 @@
     <p>1. Com o Powerpoint aberto, salve o arquivo em sua pasta com o nome “Curiosidades sobre o café”.</p>
     <p>2. Em seguida, clique com o botão direito do mouse sobre o slide na Barra de Slides, navegue até a opção Layout,
       e selecione “Somente título”. Agora o slide deve possuir apenas uma caixa de texto.</p>
-    <p> Clique dentro da caixa de texto e digite: “Os fatos curiosos sobre o café”
+    <p> Clique dentro da caixa de texto e digite: “Os fatos curiosos sobre o café”</p>
     <p>1. Pronto, já temos nossa capa.</p>
     <p>2. Agora clique no slide 1 na Barra de Slides e pressione Enter para inserir o segundo.</p>
     <p>3. Antes de começarmos a criar nossos slides, vamos configurar algumas coisas.</p>
     <h2>Design</h2>
-    1. <p>Clique no menu Design.</p>
-    2. <p>Você verá dois conjuntos, o conjunto de temas e o conjunto de variantes. Selecione um tema e uma variante do
+    <p>1. Clique no menu Design.</p>
+    <p>2. Você verá dois conjuntos, o conjunto de temas e o conjunto de variantes. Selecione um tema e uma variante do
       tema ao seu gosto. Lembre-se que é possível ainda editar as fontes e o plano de fundo como quisermos.</p>
-    3. <p>Clique no botão “Tamanho do Slide”, logo depois das variantes, e selecione “Tamanho Personalizado”. Na caixa
+    <p>3. Clique no botão “Tamanho do Slide”, logo depois das variantes, e selecione “Tamanho Personalizado”. Na caixa
       de diálogo que se abrirá, clique em “Slides dimensionados para:” e selecione A4, pois assim poderemos exportar
       para pdf e imprimir. Clique em Ok.</p>
     <p class="notas">Se o objetivo da apresentação é montar um vídeo ou apresentar numa TV, o ideal é um tamanho
@@ -156,9 +155,9 @@
     <p> Entre no site pixabay.com e procure por café, ou coffee, escolha uma imagem de sua preferência e faça o
       download, em seguida retorne ao Powerpoint.</p>
     <p>1. Clique no menu Inserir, selecione Imagem e clique em Este Dispositivo. Navegue até a pasta onde salvou a
-      imagem e selecione.
-    <p>2. Antes de clicar em Inserir, faremos algo diferente para que entenda um dos conceitos do Office.
-    <p>3. Com a imagem selecionada, clique na setinha ao lado do nome Inserir e escolha “Vincular ao arquivo”.
+      imagem e selecione.</p>
+    <p>2. Antes de clicar em Inserir, faremos algo diferente para que entenda um dos conceitos do Office.</p>
+    <p>3. Com a imagem selecionada, clique na setinha ao lado do nome Inserir e escolha “Vincular ao arquivo”.</p>
     <p class="notas">Quando inserimos uma imagem, uma cópia dela é feita dentro do aplicativo do Office, seja o
       Powerpoint, o Word, ou outro. Caso você delete a imagem original da pasta, nada acontece com a que está inserida
       em seu documento. No entanto quanto mais imagens inseridas, maior será o tamanho do documento.</p>
@@ -167,31 +166,32 @@
       imagem na pasta, se a original for deletada, a do documento será também. No entanto, isso permite que você faça
       alterações na imagem original de forma que seja atualizada dentro do arquivo.</p>
     <p>1. A imagem certamente se inseriu cobrindo o título. Clique no menu Página Inicial, procure por Organizar, e
-      dessa vez selecione Enviar para Trás.
+      dessa vez selecione Enviar para Trás.</p>
     <p>2. Agora clique com o botão direito sobre a imagem e escolha Tamanho e Posição. Defina a largura como 20cm. A
-      altura será definida automaticamente pela proporção.
+      altura será definida automaticamente pela proporção.</p>
     <p>3. Novamente clique em Organizar, escolha Alinhar, e escolha Centralizar. Repita o processo, mas desta vez
-      escolha Alinhar Parte Inferior.
-    <p>4. Salve o arquivo.
+      escolha Alinhar Parte Inferior.</p>
+    <p>4. Salve o arquivo.</p>
     <h2>Inserir e configurar sons</h2>
     <p> Vamos agora colocar uma música de fundo em nossa apresentação. Para inserir um arquivo de áudio o processo é
       basicamente o mesmo.</p>
     <p>1. Com o primeiro slide selecionado, clique no menu Inserir, procure por Áudio e clique, selecione Áudio em meu
-      PC.
+      PC.</p>
     <p>2. Para que o arquivo não fique muito grande, use a opção Vincular ao arquivo, para inserir. Lembre-se de não
       apagar o arquivo de áudio original ou movê-lo de pasta. Caso você não tenha nenhum áudio para inserir pode baixar
-      um gratuitamente na Biblioteca de Áudio do Youtube (youtube.com/audiolibrary).
-    <p>3. Posicione o ícone do áudio num dos cantos do slide, se quiser pode até diminuí-lo de tamanho.
-    <p>4. Agora que inserimos a música de fundo, vamos configurar sua reprodução.
-    <p>5. Com o ícone do áudio selecionado, clique no menu Reprodução.
-    <p>6. Procure pelo botão Volume, e selecione como Médio.
-    <p>7. Ao lado do botão de volume marque as duas caixas “Executar entre slides” e “Repetir até parar”. Isso fará com
+      um gratuitamente na Biblioteca de Áudio do Youtube:</p>
+      <a class="js-button"></a>
+    <p>3. Posicione o ícone do áudio num dos cantos do slide, se quiser pode até diminuí-lo de tamanho.</p>
+    <p>4. Agora que inserimos a música de fundo, vamos configurar sua reprodução.</p>
+    <p>5. Com o ícone do áudio selecionado, clique no menu Reprodução.</p>
+    <p>6. Procure pelo botão Volume, e selecione como Médio.</p>
+    <p>7. Ao lado do botão de volume marque as duas caixas “Executar entre slides” e “Repetir até parar”. Isso fará com</p>
       que a música toque em todos os slides continuamente.
     <p>8. Acimas das caixas que você marcou, selecione Iniciar: Automaticamente. Isso fará a música tocar assim que a
-      apresentação de slides iniciar.
+      apresentação de slides iniciar.</p>
     <p>9. E logo ao lado, marque a caixa “Ocultar durante a apresentação”, isso fará com que o ícone do áudio não fique
-      visível.
-    <p>10. Salve o arquivo.
+      visível.</p>
+    <p>10. Salve o arquivo.</p>
 
     <p> Pronto! Configuramos a música de fundo de nossa apresentação. E podemos ir direto para a parte mágica!</p>
     <h2>Animações</h2>
@@ -239,10 +239,6 @@
     <p>10. Clique em Criar. Escolha o formato mp4 e clique em Salvar.</p>
     <p>11. O processo de exportação aparecerá na Barra de Status na parte inferior do Powerpoint. Assim que for
       concluído você já poderá abrir o vídeo.</p>
-
-
-
-
 
     <!-- #endregion -->
 
